--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,83 @@
-# This config is equivalent to both the '.circleci/extended/orb-free.yml' and the base '.circleci/config.yml'
 version: 2.1
 
-# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
-# See: https://circleci.com/docs/2.0/orb-intro/
-orbs:
-  node: circleci/node@4.7
+jobs:
+  build:
+    docker:
+      - image: circleci/node:16.17.1
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run:
+          name: Show current branch
+          command: echo ${CURRENT_BRANCH}
+      - restore_cache:
+          key:
+            - app-{{checksum "package.json"}}
+            - app-
+      - run:
+          name: Install yarn
+          command: yarn install -g yarn
+      - run:
+          name: Install dependencies
+          command: yarn install
+      - save_cache:
+          paths:
+            - node_modules
+          key: app-{{checksum "package.json"}}
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
-    jobs:
-      - node/test:
-          # This is the node version to use for the `cimg/node` tag
-          # Relevant tags can be found on the CircleCI Developer Hub
-          # https://circleci.com/developer/images/image/cimg/node
-          version: '16.10'
-          # If you are using yarn, change the line below from "npm" to "yarn"
-          pkg-manager: npm
+  deploy-to-aws-s3:
+    docker:
+      - image: circleci/node:16.17.1
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run:
+          name: Show current branch
+          command: echo ${CURRENT_BRANCH}
+      - run:
+          name: Installing AWS CLI
+          working_directory: /
+          command: |
+            sudo apt-get -y -qq update
+            sudo apt-get install -y awscli
+            sudo apt-get install -y python-pip python-dev build-essential
+      - run:
+          name: Install yarn
+          command: yarn install -g yarn
+      - run:
+          name: Install dependencies
+          command: yarn install
+      - run:
+          name: Build Project
+          command: |
+            yarn install
+            yarn run build
+            cd build
+            zip ../build.zip -r * .[^.]*
+            echo "Build Successfully"
+      - run:
+          name: Deploy to AWS S3
+          command: |
+            if ["${CURRENT_BRANCH}" == "master"]
+            then
+              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_PROD_BUCKET} --delete
+            elif ["${CURRENT_BRANCH}" == "staging"]
+            then
+              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_STAGING_BUCKET} --delete
+            else
+              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_DEV_BUCKET} --delete
+            fi
+       - run:
+          name: Deploy to AWS Cloudfront
+          command: |
+            aws configure set preview.cloudfront
+            if ["${CURRENT_BRANCH}" == "master"]
+            then
+              aws cloudfront  create-invalidation --distribution-id ${PROD_DISTRIBUTION_ID} --path /\*
+            elif ["${CURRENT_BRANCH}" == "staging"]
+            then
+              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_STAGING_BUCKET} --delete
+            else
+              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_DEV_BUCKET} --delete
+            fi
+
