--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           name: Show current branch
           command: echo ${CURRENT_BRANCH}
       - restore_cache:
-          key:
+          keys:
             - app-{{checksum "package.json"}}
             - app-
       - run:
@@ -67,7 +67,7 @@ jobs:
             else
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_DEV_BUCKET} --delete
             fi
-       - run:
+      - run:
           name: Deploy to AWS Cloudfront
           command: |
             aws configure set preview.cloudfront
@@ -76,8 +76,31 @@ jobs:
               aws cloudfront  create-invalidation --distribution-id ${PROD_DISTRIBUTION_ID} --path /\*
             elif ["${CURRENT_BRANCH}" == "staging"]
             then
-              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_STAGING_BUCKET} --delete
+              aws cloudfront  create-invalidation --distribution-id ${STAGING_DISTRIBUTION_ID} --path /\*
             else
-              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_DEV_BUCKET} --delete
+              aws cloudfront  create-invalidation --distribution-id ${DEV_DISTRIBUTION_ID} --path /\*
             fi
 
+workflows:
+  build_and_deploy:
+    jobs:
+      - build
+      - deploy-to-aws-s3
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - master
+      - deploy-to-aws-cloudfront
+          requires:
+             - deploy-to-aws-s3
+          filters:
+            branches:
+              only:
+                - develop
+                - staging
+                - master
+          
