fix: circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - checkout
       - run:
           name: Show current branch
-          command: echo ${CURRENT_BRANCH}
+          command: echo ${CIRCLE_BRANCH}
       - restore_cache:
           keys:
             - app-{{checksum "package.json"}}
@@ -33,7 +33,7 @@ jobs:
       - checkout
       - run:
           name: Show current branch
-          command: echo ${CURRENT_BRANCH}
+          command: echo ${CIRCLE_BRANCH}
       - run:
           name: Installing AWS CLI
           working_directory: /
@@ -58,10 +58,10 @@ jobs:
       - run:
           name: Deploy to AWS S3
           command: |
-            if ["${CURRENT_BRANCH}" == "master"]
+            if ["${CIRCLE_BRANCH}" == "master"]
             then
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_PROD_BUCKET} --delete
-            elif ["${CURRENT_BRANCH}" == "staging"]
+            elif ["${CIRCLE_BRANCH}" == "staging"]
             then
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_STAGING_BUCKET} --delete
             else
@@ -70,11 +70,11 @@ jobs:
       - run:
           name: Deploy to AWS Cloudfront
           command: |
-            aws configure set preview.cloudfront
-            if ["${CURRENT_BRANCH}" == "master"]
+            aws configure set preview.cloudfront true
+            if ["${CIRCLE_BRANCH}" == "master"]
             then
               aws cloudfront  create-invalidation --distribution-id ${PROD_DISTRIBUTION_ID} --path /\*
-            elif ["${CURRENT_BRANCH}" == "staging"]
+            elif ["${CIRCLE_BRANCH}" == "staging"]
             then
               aws cloudfront  create-invalidation --distribution-id ${STAGING_DISTRIBUTION_ID} --path /\*
             else
@@ -85,7 +85,7 @@ workflows:
   build_and_deploy:
     jobs:
       - build
-      - deploy-to-aws-s3
+      - deploy-to-aws-s3:
           requires:
             - build
           filters:
@@ -94,13 +94,12 @@ workflows:
                 - develop
                 - staging
                 - master
-      - deploy-to-aws-cloudfront
+      - deploy-to-aws-cloudfront:
           requires:
-             - deploy-to-aws-s3
+            - deploy-to-aws-s3
           filters:
             branches:
               only:
                 - develop
                 - staging
                 - master
-          
