--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
             zip ../build.zip -r * .[^.]*
             echo "Build Successfully"
       - run:
-          name: Deploy to AWS S3
+          name: deploy-to-aws-s3
           command: |
             if ["${CIRCLE_BRANCH}" == "master"]
             then
@@ -68,7 +68,7 @@ jobs:
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_DEV_BUCKET} --delete
             fi
       - run:
-          name: Deploy to AWS Cloudfront
+          name: deploy-to-aws-cloudfront
           command: |
             aws configure set preview.cloudfront true
             if ["${CIRCLE_BRANCH}" == "master"]
