--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
             zip ../build.zip -r * .[^.]*
             echo "Build Successfully"
       - run:
-          name: deploy-to-aws-s3
+          name: Deploy to AWS S3
           command: |
             if ["${CIRCLE_BRANCH}" == "master"]
             then
@@ -67,8 +67,38 @@ jobs:
             else
               aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_DEV_BUCKET} --delete
             fi
+  deploy-to-aws-cloudfront:
+    docker:
+      - image: circleci/node:16.17.1
+    working_directory: ~/repo
+    steps:
+      - checkout
       - run:
-          name: deploy-to-aws-cloudfront
+          name: Show current branch
+          command: echo ${CIRCLE_BRANCH}
+      - run:
+          name: Installing AWS CLI
+          working_directory: /
+          command: |
+            sudo apt-get -y -qq update
+            sudo apt-get install -y awscli
+            sudo apt-get install -y python-pip python-dev build-essential
+      - run:
+          name: Install yarn
+          command: yarn install -g yarn
+      - run:
+          name: Install dependencies
+          command: yarn install
+      - run:
+          name: Build Project
+          command: |
+            yarn install
+            yarn run build
+            cd build
+            zip ../build.zip -r * .[^.]*
+            echo "Build Successfully"
+      - run:
+          name: Deploy to AWS Cloudfront
           command: |
             aws configure set preview.cloudfront true
             if ["${CIRCLE_BRANCH}" == "master"]
