--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node:16.17.1
+      - image: cimg/node:16.17.1
     working_directory: ~/repo
     steps:
       - checkout
