--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,11 +15,8 @@ jobs:
             - app-{{checksum "package.json"}}
             - app-
       - run:
-          name: Install yarn
-          command: npm install -g yarn
-      - run:
           name: Install dependencies
-          command: yarn install
+          command: npm install
       - save_cache:
           paths:
             - node_modules
@@ -42,16 +39,12 @@ jobs:
             sudo apt-get install -y awscli
             sudo apt-get install -y python-pip python-dev build-essential
       - run:
-          name: Install yarn
-          command: npm install -g yarn
-      - run:
           name: Install dependencies
-          command: yarn install
+          command: npm install
       - run:
           name: Build Project
           command: |
-            yarn install
-            yarn run build
+            npm run build
             cd build
             zip ../build.zip -r * .[^.]*
             echo "Build Successfully"
@@ -84,16 +77,12 @@ jobs:
             sudo apt-get install -y awscli
             sudo apt-get install -y python-pip python-dev build-essential
       - run:
-          name: Install yarn
-          command: yarn install -g yarn
-      - run:
           name: Install dependencies
-          command: yarn install
+          command: npm install
       - run:
           name: Build Project
           command: |
-            yarn install
-            yarn run build
+            npm run build
             cd build
             zip ../build.zip -r * .[^.]*
             echo "Build Successfully"
