--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
 
   deploy-to-aws-s3:
     docker:
-      - image: circleci/node:16.17.1
+      - image: cimg/node:16.17.1
     working_directory: ~/repo
     steps:
       - checkout
@@ -62,7 +62,7 @@ jobs:
             fi
   deploy-to-aws-cloudfront:
     docker:
-      - image: circleci/node:16.17.1
+      - image: cimg/node:16.17.1
     working_directory: ~/repo
     steps:
       - checkout
